Closed
Bug 383434
Opened 17 years ago
Closed 17 years ago
warning message at atk/nsAccessibleWrap.cpp, line 1119
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: evan.yan, Assigned: evan.yan)
Details
(Keywords: access)
Attachments
(1 file)
2.78 KB,
patch
|
aaronlev
:
review+
|
Details | Diff | Splinter Review |
When switching between tabs, or inserting/deleting text in text entry, there is warning like below
WARNING: NS_ENSURE_TRUE(atkObj) failed: file ../../../../mozilla/accessible/src/atk/nsAccessibleWrap.cpp, line 1119
atkObj could be null when fire SHOW/HIDE event for text, just return NS_OK for such case.
also add assertion in atk/nsDocAccessibleWrap::FireToolkitEvent
Attachment #267389 -
Flags: review?(aaronleventhal)
For text, we don't fire children_changed for it (text is not child accessible), we fire text_changed. That is not covered by bug 378468.
So I think we can either just fix it in this bug, or merge this patch into Surkov's patch for bug 378468.
Comment 4•17 years ago
|
||
Comment on attachment 267389 [details] [diff] [review]
patch
I'm not sure how this fits in with Surkov's SHOW/HIDE rewrite.
Attachment #267389 -
Flags: review?(aaronleventhal) → review+
You need to log in
before you can comment on or make changes to this bug.
Description
•