Bug 383434 warning message at atk/nsAccessibleWrap.cpp, line 1119patch by Evan.Yan at sun.com r=aaronleventhal